[package]
name = "j1939logger"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Simple CAN logger and DBC display typically used to diagnose vehicles."
homepage = "https://github.com/SolidDesignNet/j1939logger"
repository = "https://github.com/SolidDesignNet/j1939logger"
readme = "README.md"
keywords = ["rp1210", "slcan", "j2534", "CAN", "j1939"]
build = "build.rs"

[dependencies]
simple_table = { version = "0.3.1"}
#simple_table = { path="../simple_table" }
can_adapter = "1.0.3"

# remove bundled for win32 
fltk = { version = "1.5.22" }      #,features = ["fltk-bundled"]}
fltk-theme = { version = "0.7.9" }

clap = { version = "4.5.52", features = ["derive"] }
anyhow = "1.0.100"
timer = "0.2.0"
chrono = "0.4.42"
rust-embed = "8.9.0"
canparse = { version = "^0.1.7", git = "https://github.com/battjt/canparse.git" }
webbrowser = { version = "1.0.6" }
regex = { version = "1.12.2" }

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1.12" }

